# serpent-web

./: README.md  pyproject.toml  pytest.ini  quick_install.py
src/serpent_web/azure/: azure_service_identity.py  managed_identity.py
src/serpent_web/core/authentication/oauth20/: settings.py  token_util.py
src/serpent_web/core/util/: datetime_helpers.py  string_helpers.py
src/serpent_web/data/: data_schemas.py
src/serpent_web/data/cosmos/: cosmos_client_context.py  cosmos_settings.py
src/serpent_web/data/sql/: base_schema.py  base_sql_model.py  base_sql_repository.py  base_sqlite_model.py  pydantic_helpers.py  sql_alchemy_helpers.py  sql_context.py  sql_database_type.py
src/serpent_web/data/sql/databricks/: base_databricks_sql_model.py  base_databricks_sql_repository.py
src/serpent_web/domain/: base_manager.py  base_sql_manager.py
tests/serpent_web/core/authorization/oauth20/: test_token_util.py
tests/serpent_web/core/util/: test_datetime_helpers.py  test_string_helpers.py
